# sorteador-fut

./: main.py  pyproject.toml  requirements.txt  sorteadorApp.py
.github/workflows/: android.yml
