[project]
name = "sorteador-fut"
version = "1.0.0"
description = "Aplicativo para sorteio de times de futebol"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flet>=0.85.0"
]

[tool.flet]
org = "com.vitorcostenaro"
product = "Sorteador Fut"
company = "Vitor Costenaro"

[tool.flet.app]
path = "."
